posision fix on bottom for button download on mobile

--- a/assets/detail.css
+++ b/assets/detail.css
@@ -95,9 +95,18 @@ body {
    INSTALL BAR (MOBILE)
 ===================== */
 .install-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 95%;
+  z-index: 9999; /* keeps it above other elements */
+  background: #fff; /* optional, so it doesn't look transparent */
   display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+
   gap: 10px;
-  margin: 0 20px;
+  margin: 0 10px;
 }
 
 .install-bar a {
